commit 702658d2f8616964a6eeb3743fd85e97ac7ff09d
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Fri Aug 19 14:59:24 2011 +0200

    Expose regularization parameters (areaPenalty and conditionPenalty) in API.

commit 3e84ae5fbac10451d4935418f6281a90cedace11
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Fri Aug 19 14:19:27 2011 +0200

    Add LaplaceFilter.
    Add regularization in affine SAD Tracker (keep constant area and good condition number).
    UI: Better track display (+enable line antialiasing).

commit 6d26d9a8ccc4ce009fbf253898fea8864dd5001a
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Fri Aug 19 10:25:26 2011 +0200

    Add optimization for integer pixel search.
    Allows more agressive settings for affine coordinate descent.

commit 70ceae81c0ab561b07e640ecb9933f0a902b57cd
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Fri Aug 19 00:02:12 2011 +0200

    Document coordinate descent method in affine SAD matcher.
    Add heuristic to prevent high distortions.

commit 75520f4bc4ccbb272a1b4149d3b8d05a90f7f896
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Thu Aug 18 23:14:17 2011 +0200

    Fix affine iteration.

commit 4e8e0aa6018e3eb2fbebdad7f1cbd6c909d26e79
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Thu Aug 18 23:03:26 2011 +0200

    Handle rotations.

commit 3ce41cf3c1b5c136a61d8f4c63ccae3cafbdb8da
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Thu Aug 18 22:24:47 2011 +0200

    Slow brute-force affine diamond search implementation.

commit 1c4acd03e030c1c50dc6fc36c419c72ea69a0713
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Thu Aug 18 20:51:43 2011 +0200

    Fix detect.cc.

commit ec18cc5ea9ae2e641075a847e82d0aacb8415ad8
Author: Matthias Fauconneau <matthias.fauconneau@gmail.com>
Date:   Thu Aug 18 17:45:37 2011 +0200
